# Nano-MemGPT

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.lora.yaml  docker-compose.mistral-strict.yaml  docker-compose.mistral.yaml  docker-compose.strict.yaml  docker-compose.yaml  pyproject.toml  requirements-vllm.txt  requirements.txt
configs/: experiment.yaml  repos.yaml  vanilla_models.yaml
docker/: Dockerfile
docs/: README.md  artifact_policy.md  document_qa_proxy.md  evidence_filter_report.md  experiment_1_report.md  failure_audit_report.md  lora_training.md  oracle_experiment.md  oracle_experiment_report.md  phase_routed_dmr_report.md  post_lora_evaluation_report.md  proposal_summary.md  query_candidate_rerank_report.md  query_hard_positive_lora_report.md  query_only_lora_report.md  query_preference_dataset_report.md  query_preference_dpo_report.md  query_skeleton_dmr_report.md  query_skeleton_gap_report.md  research_plan.md  teacher_containment_mismatch_audit.md  teacher_evidence_ablation_report.md  teacher_query_ablation_report.md  teacher_query_skeleton_report.md  vanilla_dmr_protocol.md  vanilla_memgpt_pilot.md
scripts/: analyze_query_skeleton_gap.py  audit_post_lora_failures.py  audit_teacher_sft_dataset.py  bootstrap_external_repos.py  check_llama_preflight.py  check_openai_teacher_preflight.py  check_setup.py  configure_dmr_recall_contract.py  download_student_model.py  eval_dmr_oracle_replay.py  eval_document_qa_context_pack.py  eval_evidence_filter_dmr.py  eval_phase_routed_dmr.py  eval_query_candidate_rerank_dmr.py  eval_vanilla_dmr.py  (+16 more)
(+17 files in other folders)
